# interpret.it

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  docker-compose.yml  interpretation-trainer-prompt.md
contracts/: README.md  contracts.json
docs/: DEPLOY.md  PHASE3_NOTES.md
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: page.tsx  (+3 more)
infra/: Caddyfile
scripts/: backup_postgres.sh  gen_contracts.py
services/analysis/: Dockerfile  pyproject.toml
services/analysis/app/: embeddings.py  main.py  spend.py  worker.py
services/analysis/app/asr/: __init__.py  transcribe.py  transcribe_groq.py
services/analysis/app/content/: durations.py  generate.py  levels.py  session_generation.py  topics.py
services/analysis/app/contracts/: __init__.py  models.py
services/analysis/app/embeddings/: generate.py
services/analysis/app/evaluation/: evaluate.py  memorize.py
services/analysis/app/llm/: __init__.py  client.py  templates.py
services/analysis/app/llm/prompts/: generate_segments.md
services/analysis/app/mocks/: __init__.py  handlers.py
services/analysis/app/prosody/: __init__.py  cognitive_load.py  filler_lexicon.py  pipeline.py  word_prosody.py
services/analysis/app/reference/: __init__.py  generate.py
services/analysis/app/rpc/: __init__.py  gateway_client.py
services/analysis/app/tts/: __init__.py  disfluency.py  elevenlabs_tts.py  speaker_profiles.py
services/analysis/app/vocab/: extract.py
services/analysis/scripts/: download_models.py  preview_generation.py
services/analysis/tests/: test_cognitive_load.py  test_content_generate.py  test_eval_model.py  test_filler_lexicon.py  test_memorize_eval.py  test_mocks.py  test_prompt_templates.py  test_session_generation.py  test_spend.py
services/gateway/: Dockerfile  alembic.ini  pyproject.toml
services/gateway/alembic/: env.py
services/gateway/alembic/versions/: 0001_initial_schema.py  0002_session_generation_fields.py  0003_vocab_deck.py  0004_attempt_duration.py  0005_memorization.py  0006_mastery_tier.py  0007_mastery_per_pair_and_es.py  0008_lang_add_zh.py  0009_pool_reuse.py
services/gateway/app/: attempt_quota.py  db.py  main.py  queue.py  quota.py  session_manager.py  storage.py  ws_auth.py
services/gateway/app/api/: _overview.py  health.py  internal.py  sessions.py  vocab.py
services/gateway/app/contracts/: __init__.py  models.py
services/gateway/app/engine/: difficulty_ladder.py  mastery_tier.py  segment_picker.py  state_machine.py
services/gateway/app/models/: __init__.py  tables.py
services/gateway/app/vocab/: seeder.py  seeds.py  srs.py
services/gateway/app/ws/: session_socket.py
services/gateway/scripts/: seed.py  seed_es_vocab.py
services/gateway/tests/: test_asr_hints.py  test_attempt_quota.py  test_difficulty_ladder.py  test_integration_attempt_flow.py  test_mastery_tier.py  test_replay.py  test_segment_picker.py  test_segment_pool.py  test_state_machine.py
(+39 files in other folders)
