[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "anthropic>=0.37.0",
    "openai>=1.50.0",
    "elevenlabs>=1.3.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
